--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gastos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="371dp"
+        android:layout_height="569dp"
+        app:layout_constraintTop_toBottomOf="@+id/delete_all_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.993" />
+
+    <Button
+        android:id="@+id/gastos_total_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:text="Total de gastos"
+        app:layout_constraintBottom_toTopOf="@+id/delete_all_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.162" />
+
+    <Button
+        android:id="@+id/add_gasto_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Añadir gasto"
+        app:layout_constraintBottom_toTopOf="@+id/delete_all_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.296"
+        app:layout_constraintStart_toEndOf="@+id/gastos_total_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.484" />
+
+    <Button
+        android:id="@+id/delete_all_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Borrar Todos"
+        app:layout_constraintBottom_toTopOf="@+id/gastos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gastos_total_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
